[package]
name = "appa"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.1"
tikv-jemallocator = "0.6.0"
tracing-subscriber = { version = "0.3.19", features = ["std", "env-filter"] }
tracing-forest = { version = "0.1.6", features = ["ansi", "smallvec"] }

[dev-dependencies]
p3-challenger = { git = "https://github.com/Plonky3/Plonky3.git", rev = "b91644a" }
p3-baby-bear = { git = "https://github.com/Plonky3/Plonky3.git", rev = "b91644a" }
p3-field = { git = "https://github.com/Plonky3/Plonky3.git", rev = "b91644a" }
p3-fri = { git = "https://github.com/Plonky3/Plonky3.git", rev = "b91644a" }
p3-commit = { git = "https://github.com/Plonky3/Plonky3.git", rev = "b91644a" }
p3-keccak = { git = "https://github.com/Plonky3/Plonky3.git", rev = "b91644a" }
p3-merkle-tree = { git = "https://github.com/Plonky3/Plonky3.git", rev = "b91644a" }
p3-symmetric = { git = "https://github.com/Plonky3/Plonky3.git", rev = "b91644a" }
p3-dft = { git = "https://github.com/Plonky3/Plonky3.git", rev = "b91644a" }
p3-uni-stark = { git = "https://github.com/Plonky3/Plonky3.git", rev = "b91644a" }
p3-poseidon2-air = { git = "https://github.com/Plonky3/Plonky3.git", rev = "b91644a" }
criterion = "0.6.0"
