[package]
name = "appa"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = "4.5.39"
rand = "0.9.1"
tikv-jemallocator = "0.6.0"
tracing-subscriber = { version = "0.3.19", features = ["std", "env-filter"] }
tracing-forest = { version = "0.1.6", features = ["ansi", "smallvec"] }

# p3 dependencies
p3-baby-bear = { git = "https://github.com/Plonky3/Plonky3.git", rev = "b91644a" }
p3-blake3-air = { git = "https://github.com/Plonky3/Plonky3.git", rev = "b91644a" }
p3-dft = { git = "https://github.com/Plonky3/Plonky3.git", rev = "b91644a" }
p3-examples = { git = "https://github.com/Plonky3/Plonky3.git", rev = "b91644a" }
p3-field = { git = "https://github.com/Plonky3/Plonky3.git", rev = "b91644a" }
p3-keccak-air = { git = "https://github.com/Plonky3/Plonky3.git", rev = "b91644a" }
p3-koala-bear = { git = "https://github.com/Plonky3/Plonky3.git", rev = "b91644a" }
p3-poseidon2 = { git = "https://github.com/Plonky3/Plonky3.git", rev = "b91644a" }
p3-poseidon2-air = { git = "https://github.com/Plonky3/Plonky3.git", rev = "b91644a" }
p3-maybe-rayon = { optional = true, git = "https://github.com/Plonky3/Plonky3.git", rev = "b91644a" }
p3-mersenne-31 = { git = "https://github.com/Plonky3/Plonky3.git", rev = "b91644a" }
p3-monty-31 = { version = "0.3.0", git = "https://github.com/Plonky3/Plonky3.git", rev = "b91644a" }

[dev-dependencies]

[features]
parallel = ["p3-maybe-rayon/parallel"]
